--- a/themes/bilberry-hugo-theme/layouts/_default/baseof.html
+++ b/themes/bilberry-hugo-theme/layouts/_default/baseof.html
@@ -45,8 +45,8 @@
         {{- else -}}
         <meta property="og:type" content="website">
         {{- end }}
-        <link rel="icon" type="image/png" href="{{ "favicon-32x32.png" | absURL }}" sizes="32x32">
-        <link rel="icon" type="image/png" href="{{ "favicon-16x16.png" | absURL }}" sizes="16x16">
+
+        <link rel="icon" type="image/png" href="{{ "images/favicon-16x16.png" | absURL }}" sizes="16x16">
 
 	{{ if .RSSLink }}
 	  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
@@ -85,11 +85,11 @@
         {{ end }}
 
         {{ $js := resources.Get "js/externalDependencies.js" }}
-        {{ $secureJS := $js | resources.Fingerprint "md5" }}
+        {{ $secureJS := $js | resources.Fingerprint "sha512" }}
         <script type="text/javascript" src="{{ $secureJS.Permalink }}" integrity="{{ $secureJS.Data.Integrity }}"></script>
 
         {{ $jsTemplate := resources.Get "js/theme.js" }}
-        {{ $secureJS := $jsTemplate | resources.ExecuteAsTemplate "js/theme.js" . | fingerprint "md5" }}
+        {{ $secureJS := $jsTemplate | resources.ExecuteAsTemplate "js/theme.js" . | fingerprint "sha512" }}
         <script type="text/javascript" src="{{ $secureJS.Permalink }}" integrity="{{ $secureJS.Data.Integrity }}"></script>
 
         <script>
