--- a/themes/bilberry-hugo-theme/assets/sass/_variables.scss
+++ b/themes/bilberry-hugo-theme/assets/sass/_variables.scss
@@ -11,8 +11,8 @@ $content-font: 'Open Sans', sans-serif;
 $article-footer-font: 'Roboto Mono', monospace;
 
 // main colors
-$page-background-color: #f1f1f1;
-$base-color: #1d1f38;
+$page-background-color: #000;
+$base-color: #acacac;
 $special-color: #2D3642;
 $highlight-color: #5c8b59;
 $text-color: #222;
