fix color contrast issues #1

--- a/themes/bilberry-hugo-theme/assets/sass/_variables.scss
+++ b/themes/bilberry-hugo-theme/assets/sass/_variables.scss
@@ -11,10 +11,10 @@ $content-font: 'Open Sans', sans-serif;
 $article-footer-font: 'Roboto Mono', monospace;
 
 // main colors
-$page-background-color: #000;
-$base-color: #acacac;
+$page-background-color: #f1f1f1;
+$base-color: #1d1f37;
 $special-color: #2D3642;
-$highlight-color: #5c8b59;
+$highlight-color: #293e28;
 $text-color: #222;
 
 // easy styling
@@ -32,7 +32,7 @@ $bubble-background-color: #ccc;
 $bubble-hover-color: $highlight-color;
 
 $article-background-color: #fff;
-$meta-text-color: #999;
+$meta-text-color: #262626;
 $meta-border-color: #eee;
 $continue-reading-hover-color: $meta-text-color;
 
