--- a/themes/bilberry-hugo-theme/assets/sass/_footer.scss
+++ b/themes/bilberry-hugo-theme/assets/sass/_footer.scss
@@ -125,7 +125,7 @@ footer {
         justify-content: space-between;
         padding: 4rem 0;
         font-size: 0.8em;
-        color: #777;
+        color: #293e28;
 
         &:after {
             display: none;
