--- a/themes/bilberry-hugo-theme/layouts/partials/header.html
+++ b/themes/bilberry-hugo-theme/layouts/partials/header.html
@@ -3,16 +3,16 @@
         <div class="logo">
             <a href="{{ .Site.BaseURL | relLangURL }}" class="logo">
                 {{ if and (isset .Site.Params "customimage") (ne .Site.Params.customImage "") }}
-                    <img src="{{ .Site.Params.customImage | relURL }}" alt="">
+                    <img src="{{ .Site.Params.customImage | relURL }}" alt="Pddev's logo">
                 {{ else }}
                     <img src="https://www.gravatar.com/avatar/{{ md5 .Site.Params.gravatarEMail }}?d=mm&size=200" alt="">
                 {{ end }}
 
-                <span class="overlay"><i class="fa {{ .Site.Params.overlayIcon | default "fa-home" }}"></i></span>
+<!--                <span class="overlay"><i class="fa {{ .Site.Params.overlayIcon | default "fa-home" }}"></i></span>-->
             </a>
         </div>
         <div class="titles">
-            <h3 class="title"><a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title | default "My cool new blog" }}</a></h3>
+            <h3 class="title">{{ .Site.Title | default "My cool new blog" }}</h3>
             {{ with .Site.Params.Subtitle }}
                 <span class="subtitle">{{ . }}</span>
             {{ end }}
