re-added home icon overlay on logo

--- a/themes/bilberry-hugo-theme/assets/sass/_header.scss
+++ b/themes/bilberry-hugo-theme/assets/sass/_header.scss
@@ -41,7 +41,11 @@ header {
         a {
             border: 0;
         }
-
+        &:hover {
+            .overlay {
+                opacity: 1;
+            }
+        }
         img {
             max-width: 100%;
             border-radius: 50%;
