--- a/themes/bilberry-hugo-theme/layouts/partials/header.html
+++ b/themes/bilberry-hugo-theme/layouts/partials/header.html
@@ -7,8 +7,7 @@
                 {{ else }}
                     <img src="https://www.gravatar.com/avatar/{{ md5 .Site.Params.gravatarEMail }}?d=mm&size=200" alt="">
                 {{ end }}
-
-<!--                <span class="overlay"><i class="fa {{ .Site.Params.overlayIcon | default "fa-home" }}"></i></span>-->
+                <span class="overlay"><i class="fa {{ .Site.Params.overlayIcon | default "fa-home" }}"></i></span>
             </a>
         </div>
         <div class="titles">
